# any_ptr

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: any_ptr.h  any_shared_ptr.h
src/benchmark/: CMakeLists.txt  benchmark  benchmark.hpp  benchmark.vcxproj  benchmark.vcxproj.filters  benchmark_any.cpp  benchmark_any_ptr.cpp  benchmark_any_shared_ptr.cpp  benchmark_std_shared_ptr.cpp  benchmark_v2_any_shared_ptr.cpp  benchmark_ver_2_any_shared_ptr.cpp  main.cpp  precompiled.cpp  precompiled.hpp
src/test/: CMakeLists.txt  main.cpp  precompiled.cpp  precompiled.hpp  test.vcxproj  test.vcxproj.filters  test_any_shared_ptr.cpp
visualstudio/: any_ptr.sln
visualstudio/props/: Common.props  Configuration_Debug.props  Configuration_Debug_clang_c2.props  Configuration_Release.props  Configuration_Release_clang_c2.props  Debug.props  PlatformName_Win32.props  PlatformToolset.props  PlatformToolset_LLVM-vs2014.props  PlatformToolset_v140.props  PlatformToolset_v140_clang_c2.props  PlatformToolset_v141.props  PlatformToolset_v141_clang_c2.props  PlatformToolset_v142.props  Release.props  google_benchmark.props  google_test.props  lib.props
